<resources>
    <string name="app_name">hshealthy</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="my_is_info_user">我是普通用户</string>
    <string name="my_is_doctor">我是专家医生</string>

    <!--个人中心文案-->
    <string name="address_administration">地址管理</string>
    <string name="my_health_plan">我的健康计划</string>
    <string name="health_archives">健康档案</string>
    <string name="my_assets">我的资产</string>
    <string name="task_center">任务中心</string>
    <string name="my_order">我的订单</string>
    <string name="my_seting">设置</string>
    <string name="my_collection">收藏</string>
    <string name="earn_points">签到积分赚不停</string>

    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="qr_code">我的二维码</string>
    <string name="address">我的地址</string>
    <string name="phone">账号</string>
    <string name="cancel">取消</string>
    <string name="album">从手机相册选择</string>
</resources>
