<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_bt_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_ffffff"
                android:paddingBottom="@dimen/dp_25"
                android:paddingLeft="@dimen/dp_15"
                android:paddingRight="@dimen/dp_15"
                android:paddingTop="@dimen/dp_25">

                <hshealthy.cn.com.customview.CircleImageView
                    android:id="@+id/h_personal_avatar"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_12"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/ic_discovery_gray" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/h_personal_avatar"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/personal_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/standard_font_color"
                        android:textSize="@dimen/sp_16"
                        tools:text="用户名" />

                    <TextView
                        android:id="@+id/personal_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_7"
                        android:textColor="@color/there_font_color"
                        android:textSize="@dimen/sp_13"
                        tools:text="账号：18521035923" />

                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/address_administration"
                    android:textColor="#878787"
                    android:textSize="@dimen/sp_16" />

            </RelativeLayout>

            <!--健康计划，健康档案-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:background="@color/color_ffffff"
                android:orientation="vertical"
                android:paddingRight="@dimen/dp_15"
                android:paddingLeft="@dimen/dp_15">

                <RelativeLayout
                    android:id="@+id/rl_health_plan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_10">

                    <ImageView
                        android:id="@+id/image_1"
                        android:layout_width="@dimen/dp_29"
                        android:layout_height="@dimen/dp_29"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_profile_healthplan" />

                    <TextView
                        android:id="@+id/my_health_plan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/dp_15"
                        android:layout_toRightOf="@+id/image_1"
                        android:text="@string/my_health_plan"
                        android:textColor="@color/standard_font_color"
                        android:textSize="@dimen/sp_16" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_0.5"
                    android:background="#EEEEEE">

                </View>

                <RelativeLayout
                    android:id="@+id/rl_health_archives"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/dp_10"
                    android:paddingTop="@dimen/dp_10">

                    <ImageView
                        android:id="@+id/image_2"
                        android:layout_width="@dimen/dp_29"
                        android:layout_height="@dimen/dp_29"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_profile_healthdocument" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/dp_15"
                        android:layout_toRightOf="@+id/image_2"
                        android:text="@string/health_archives"
                        android:textColor="@color/standard_font_color"
                        android:textSize="@dimen/sp_16" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true" />
                </RelativeLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:background="@color/color_ffffff"
                android:orientation="vertical"
                android:paddingRight="@dimen/dp_15"
                android:paddingLeft="@dimen/dp_15">

                <RelativeLayout
                    android:id="@+id/rl_my_assets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/dp_10"
                    android:paddingTop="@dimen/dp_10">

                    <ImageView
                        android:id="@+id/image_3"
                        android:layout_width="@dimen/dp_29"
                        android:layout_height="@dimen/dp_29"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_profile_myassets" />

                    <TextView
                        android:id="@+id/my_assets"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/dp_15"
                        android:layout_toRightOf="@+id/image_3"
                        android:text="@string/my_assets"
                        android:textColor="@color/standard_font_color"
                        android:textSize="@dimen/sp_16" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_0.5"
                    android:background="#EEEEEE">

                </View>

                <RelativeLayout
                    android:id="@+id/rl_task_center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/dp_10"
                    android:paddingTop="@dimen/dp_10">

                    <ImageView
                        android:id="@+id/image_4"
                        android:layout_width="@dimen/dp_29"
                        android:layout_height="@dimen/dp_29"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_profile_task" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/dp_15"
                        android:layout_toRightOf="@+id/image_4"
                        android:text="@string/task_center"
                        android:textColor="@color/standard_font_color"
                        android:textSize="@dimen/sp_16" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/dp_15"
                        android:layout_toLeftOf="@+id/ic_image"
                        android:text="@string/earn_points"
                        android:textColor="@color/color_f7c63e"
                        android:textSize="@dimen/sp_15" />

                    <ImageView
                        android:id="@+id/ic_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true" />
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rl_my_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:background="@color/color_ffffff"
                android:paddingLeft="@dimen/dp_15"
                android:paddingRight="@dimen/dp_15"
                android:paddingBottom="@dimen/dp_10"
                android:paddingTop="@dimen/dp_10">

                <ImageView
                    android:id="@+id/image_5"
                    android:layout_width="@dimen/dp_29"
                    android:layout_height="@dimen/dp_29"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_profile_orders" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_toRightOf="@+id/image_5"
                    android:text="@string/my_order"
                    android:textColor="@color/standard_font_color"
                    android:textSize="@dimen/sp_16" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>


            <!--收藏。设置-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:background="@color/color_ffffff"
                android:orientation="vertical"
                android:paddingRight="@dimen/dp_15"
                android:paddingLeft="@dimen/dp_15">
                <RelativeLayout
                    android:id="@+id/rl_collection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_10">
                    <ImageView
                        android:id="@+id/image_6"
                        android:layout_width="@dimen/dp_29"
                        android:layout_height="@dimen/dp_29"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_profile_fav" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/dp_15"
                        android:layout_toRightOf="@+id/image_6"
                        android:text="@string/my_collection"
                        android:textColor="@color/standard_font_color"
                        android:textSize="@dimen/sp_16" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_0.5"
                    android:background="#EEEEEE">

                </View>

                <RelativeLayout
                    android:id="@+id/rl_setup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/dp_10"
                    android:paddingTop="@dimen/dp_10">

                    <ImageView
                        android:id="@+id/image_7"
                        android:layout_width="@dimen/dp_29"
                        android:layout_height="@dimen/dp_29"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_profile_setting" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/dp_15"
                        android:layout_toRightOf="@+id/image_7"
                        android:text="@string/my_seting"
                        android:textColor="@color/standard_font_color"
                        android:textSize="@dimen/sp_16" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>