<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/image_user"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_15"
        android:background="@color/color_ffffff"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15"
        android:paddingTop="@dimen/dp_12"
        android:paddingBottom="@dimen/dp_12"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:text="头像"
            android:layout_centerVertical="true"
            android:textColor="@color/standard_font_color"
            android:textSize="@dimen/sp_16"
            android:layout_height="wrap_content" />

        <hshealthy.cn.com.customview.CircleImageView
            android:id="@+id/h_personal_avatar"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/jiantou"
            android:layout_marginRight="@dimen/dp_12"
            android:scaleType="centerCrop"
            tools:src="@drawable/ic_discovery_gray" />

        <ImageView
            android:id="@+id/jiantou"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <!--健康计划，健康档案-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:background="@color/color_ffffff"
        android:orientation="vertical"
        android:paddingRight="@dimen/dp_15"
        android:paddingLeft="@dimen/dp_15">

        <RelativeLayout
            android:id="@+id/rl_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dp_13"
            android:paddingBottom="@dimen/dp_13">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/name"
                android:textColor="@color/standard_font_color"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/image_name"
                tools:text="@string/name"
                android:textColor="@color/color_878787"
                android:textSize="@dimen/sp_15" />
            <ImageView
                android:id="@+id/image_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.5"
            android:background="#EEEEEE">

        </View>

        <RelativeLayout
            android:id="@+id/rl_user_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp_13"
            android:paddingTop="@dimen/dp_13">

           <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/sex"
                android:textColor="@color/standard_font_color"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/text_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/image_sex"
                tools:text="@string/sex"
                android:textColor="@color/color_878787"
                android:textSize="@dimen/sp_15" />

            <ImageView
                android:id="@+id/image_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.5"
            android:background="#EEEEEE">

        </View>

        <RelativeLayout
            android:id="@+id/rl_user_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp_13"
            android:paddingTop="@dimen/dp_13">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/phone"
                android:textColor="@color/standard_font_color"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/text_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                tools:text="18521035922"
                android:textColor="@color/color_878787"
                android:textSize="@dimen/sp_15" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.5"
            android:background="#EEEEEE">

        </View>

        <RelativeLayout
            android:id="@+id/rl_user_qr_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp_13"
            android:paddingTop="@dimen/dp_13">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/qr_code"
                android:textColor="@color/standard_font_color"
                android:textSize="@dimen/sp_16" />


            <ImageView
                android:layout_width="@dimen/dp_21"
                android:layout_height="@dimen/dp_21"
                android:src="@drawable/ic_list_qrcode"
                android:layout_marginRight="@dimen/dp_5"
                android:layout_toLeftOf="@+id/image_qr_code"
                android:layout_centerVertical="true" />

            <ImageView
                android:id="@+id/image_qr_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_user_adress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15"
        android:paddingLeft="@dimen/dp_15"
        android:background="@color/color_ffffff"
        android:paddingBottom="@dimen/dp_13"
        android:paddingTop="@dimen/dp_13">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/address"
            android:textColor="@color/standard_font_color"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/image_address"
            tools:text="@string/address"
            android:textColor="@color/color_878787"
            android:textSize="@dimen/sp_15" />

        <ImageView
            android:id="@+id/image_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>


</LinearLayout>